@@ -8,7 +8,6 @@ import ru.asteises.sberbankcityguide.parser.CityParserService;
 import java.io.File;
 import java.io.FileNotFoundException;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Scanner;
 
@@ -36,12 +35,33 @@ public class CityParserServiceImpl implements CityParserService {
         return parseForRecords(records);
     }
 
+    /**
+     * Метод принимает запись из парсера. Возвращает лист City.
+     *
+     * @param line - String
+     * @return - List<String>
+     */
     @Override
     public List<String> getRecordFromLine(String line) {
-        String[] strings = line.split("\n");
-        return new ArrayList<>(Arrays.asList(strings));
+        return List.of(splitLine(line));
     }
 
+    /**
+     * Метод сплитит приходящую стрингу по указанным параметрам. Возвращает массив стрингов.
+     *
+     * @param line - String
+     * @return - String[]
+     */
+    private String[] splitLine(String line) {
+        return line.split(";", -1);
+    }
+
+    /**
+     * Метод принимает записи городов. Обрабатывает каждую запись и возвращает список City.
+     *
+     * @param records - List<List<String>>
+     * @return - List<City>
+     */
     private List<City> parseForRecords(List<List<String>> records) {
         List<City> cities = new ArrayList<>();
         for (List<String> record : records) {
@@ -50,54 +70,45 @@ public class CityParserServiceImpl implements CityParserService {
         return cities;
     }
 
+    /**
+     * Метод принимает значения для создания объекта City. Обрабатывает их и возвращает объект City.
+     *
+     * @param oneCityRecord - List<String>
+     * @return - City
+     */
     private City getCityFromRecord(List<String> oneCityRecord) {
-        String s = oneCityRecord.get(0);
-        int[] data = parseColumnsDelimiterIndex(s);
-        return createCityFromData(s, data);
-    }
-
-    private int[] parseColumnsDelimiterIndex(String string) {
-        int[] delimiterIndex = new int[5];
-        int idx = 0;
-        for (int i = 0; i < string.length(); i++) {
-            char c = string.charAt(i);
-            if (c == ';') {
-                delimiterIndex[idx] = i;
-                idx++;
-            }
+        if (oneCityRecord.size() != 6) {
+            throw new RuntimeException("Количество значений не соответствует записи в этой таблице");
         }
-        return delimiterIndex;
-    }
+        int id = Integer.parseInt(oneCityRecord.get(0));
+        String name = oneCityRecord.get(1);
+        String region = oneCityRecord.get(2);
+        String district = oneCityRecord.get(3);
+        int population = Integer.parseInt(oneCityRecord.get(4));
+        String foundation = oneCityRecord.get(5);
 
-    private City createCityFromData(String record, int[] delimiterIndex) {
-        City city = new City();
-
-        int id = Integer.parseInt(record.substring(0, delimiterIndex[0]));
-        city.setId(id);
-
-        String name = record.substring(delimiterIndex[0] + 1, delimiterIndex[1]);
-        city.setName(checkEmptyFields(name));
-
-        String region = record.substring(delimiterIndex[1] + 1, delimiterIndex[2]);
-        city.setRegion(checkEmptyFields(region));
-
-        String district = record.substring(delimiterIndex[2] + 1, delimiterIndex[3]);
-        city.setDistrict(checkEmptyFields(district));
-
-        int population = Integer.parseInt(record.substring(delimiterIndex[3] + 1, delimiterIndex[4]));
-        city.setPopulation(population);
-
-        String foundation = record.substring(delimiterIndex[4] + 1);
-        city.setFoundation(checkEmptyFields(foundation));
-
+        City city = City.builder()
+                .id(id)
+                .name(checkEmptyFields(name))
+                .region(checkEmptyFields(region))
+                .district(checkEmptyFields(district))
+                .population(population)
+                .foundation(checkEmptyFields(foundation))
+                .build();
         log.info("Create new city: {}", city);
         return city;
     }
 
-    private String checkEmptyFields(String string) {
-        if (string.isEmpty()) {
+    /**
+     * Метод проверяет приходящее значение. В случе пустого значения подставляет значение по умолчанию.
+     *
+     * @param inputValue - String
+     * @return - String
+     */
+    private String checkEmptyFields(String inputValue) {
+        if (inputValue == null || inputValue.isEmpty()) {
             return "none";
         }
-        return string;
+        return inputValue;
     }
 }
